--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.11",
     "@mui/joy": "^5.0.0-alpha.72",
     "@mui/material": "^5.11.12",
     "@mui/styles": "^5.11.12",
+    "@mui/x-data-grid": "^6.1.0",
     "@supabase/supabase-js": "^2.11.0",
     "@tanstack/react-query": "^4.26.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +23,7 @@
     "@types/react-dom": "^18.0.11",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
+    "graphql-tag": "^2.12.6",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
