--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.2.2",
+    "@types/react-window": "^1.8.5",
     "tailwindcss": "^3.2.7"
   }
 }
