--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^3.3.1",
     "@types/react-window": "^1.8.5",
+    "jest": "^29.5.0",
     "tailwindcss": "^3.3.2"
   }
 }
