--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "react-toastify": "^9.1.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
